--- a/bootstrap/css/custom.style.css
+++ b/bootstrap/css/custom.style.css
@@ -3,8 +3,7 @@
 }
 
 #hero {
-  height: 500px;
-  overflow: hidden;
+  height: 600px;
 }
 
 header > video {
@@ -14,5 +13,9 @@ header > video {
 #layer {
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 101;
-  height: 500px;
+  height: 600px;
+}
+
+#services article figure {
+  height: 200px;
 }
